<resources>
    <string name="app_name">Applace</string>
    <string name="logotipo">Logotipo do App</string>
    <string name="Imoveis">Imoveis</string>
    <string name="Fornecedores">Fornecedores</string>

    <string name="Imoveis_nome">Nome do imovel:</string>
    <string name="Imoveis_content_descri">Imagem de um Imovel para Aluguel</string>
    <string name="Imoveis_categoria">Categoria do imovel:</string>
    <string name="Imoveis_descricao">Descrição do imovel:</string>
    <string name="Imoveis_valor">Imovel Valor 00.00</string>

    <string name="Fornecedor_nome">Nome do Fornecedor:</string>
    <string name="Fornecedor_content_descri">Imagem de um fornecedor</string>
    <string name="Fornecedor_descri">Descricao default</string>
    <string name="Fornecedor_classificacao">Imovel_Default</string>
    <string name="Fornecedor_bt_vermais">Ver Mais</string>
    <string name="title_activity_zform_imovel">ZformImovel</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="nome">Nome:</string>
    <string name="cpf">Cpf:</string>
    <string name="login">E-mail:</string>
    <string name="senha">senha:</string>

    <string name="Fornecedor">Tipo Fornecedor</string>
    <string name="Cliente">Tipo Cliente</string>

    <string name="botao_entar">Entrar</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="bt_cadastrase">Cadastrar-se</string>
    <string name="bt_inserirImagem">Inserir Imagem</string>

    <string name="data">dd/mm/aaaa</string>
    <string name="menu_sair">Sair</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">TODO</string>
</resources>