<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/listv_Imoveis"
        android:layout_width="0dp"
        android:layout_height="249dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="#ECF0F1"
        android:descendantFocusability="afterDescendants"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Imoveis" />

    <TextView
        android:id="@+id/tv_Imoveis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/Imoveis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Fornecedor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/Fornecedores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listv_Imoveis" />

    <ScrollView
        android:id="@+id/scrV_fornecedores"
        android:layout_width="329dp"
        android:layout_height="210dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Fornecedor">

        <LinearLayout
            android:id="@+id/ln_laoutscrollfornecedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="181dp"
                android:layout_height="170dp"
                android:layout_weight="10"
                android:contentDescription="@string/Fornecedor_content_descri"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:id="@+id/linearlayoutverticalForne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_nomeFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Fornecedor_nome" />

                <TextView
                    android:id="@+id/tv_fornecedor_descricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Fornecedor_content_descri" />

                <RatingBar
                    android:id="@+id/ratingBar_fornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/bt_ver_maisfornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/azul_tema"
                    android:text="@string/Fornecedor_bt_vermais"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bt_floatAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:contentDescription="@string/add"
        android:focusable="true"
        app:backgroundTint="@color/lightGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_disponib"
        app:tint="@null" />

</androidx.constraintlayout.widget.ConstraintLayout>